Depsgraph: Ensure DOF object is always in the graph

Related in T60961.
Unfortunately, doesn't fix it yet. Needs deeper investigation.